# anndata-fcs

./: .gitignore  Makefile  README.md  download.sh  pyproject.toml  requirements.txt  testing.ipynb  testing_citeseq.ipynb  testing_flowio.ipynb
.github/workflows/: docs.yml  release.yaml  testing.yml
anndata_fcs/: __init__.py  _convert.py  _gate.py  _plot.py  _types.py
data/: testing_flowio.ipynb
docs/: Makefile
docs/source/: conf.py  example.rst  index.rst  install.rst  vignette.ipynb
src/anndata_fcs/: _convert.py  _gate.py  _plot.py  _version.py
test/: test_package.py  testing.h5ad
