[build-system]
build-backend = "uv_build"
requires = [ "uv-build>=0.9.28,<0.10" ]

[project]
name = "anndata-fcs"
version = "0.2.0"
description = "Converting FCS files to AnnData objects."
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
maintainers = [ { name = "harryhaller001", email = "harryhaller001@gmail.com" } ]
authors = [ { name = "harryhaller001", email = "harryhaller001@gmail.com" } ]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

dependencies = [ "anndata", "flowio", "matplotlib" ]

optional-dependencies.docs = [
    "ipython",
    "nbsphinx",
    "sphinx",
    "sphinx-autoapi",
    "sphinx-autodoc-typehints",
    "sphinx-book-theme",
]

optional-dependencies.test = [
    "coverage",
    "flit",
    "ipykernel",
    "ipython",
    "ipywidgets",
    # Typing support
    "pandas-stubs",
    "pre-commit",
    "pytest",
    "ruff",
    "scanpy",
    "twine",
    "ty",
]
urls.Documentation = "https://harryhaller001.github.io/anndata-fcs/"
urls.Source = "https://github.com/harryhaller001/anndata-fcs"

[tool.flit.sdist]
include = [ "src/anndata_fcs/", "test/" ]
exclude = [
    "docs",
    "coverage",
    ".vscode",
    "data",
    ".github",
    ".git",
    ".pre-commit-config.yaml",
    ".python-version",
    "requirements.txt",
    "Makefile",
    ".gitignore",
]

[tool.ruff]
line-length = 120
extend-include = [ "*.ipynb" ]
format.docstring-code-format = true
lint.select = [ "B", "BLE", "C4", "D", "E", "F", "I", "RUF100", "TID", "UP", "W" ]
lint.ignore = [ "B008", "C408", "D100", "D104", "D105", "D107", "D203", "D213", "D400", "D401", "E501", "E731", "E741" ]
lint.per-file-ignores."*/__init__.py" = [ "F401" ]
lint.per-file-ignores."docs/*" = [ "I" ]
lint.per-file-ignores."test/*" = [ "D" ]
lint.pydocstyle.convention = "google"

[tool.pyproject-fmt]
column_width = 120
indent = 4
keep_full_version = false
max_supported_python = "3.13"

[tool.pytest.ini_options]
minversion = "7.0"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
log_level = "INFO"
log_cli = true
python_files = "test_*.py"
testpaths = [ "test" ]
xfail_strict = true
addopts = [
    "--import-mode=importlib", # allow using test files with same name
]

[tool.coverage.run]
source = [ "src/anndata_fcs" ]
omit = [ "*/test/*" ]

[tool.coverage.report]
exclude_lines = [ "raise", "except" ]
ignore_errors = true

[tool.coverage.html]
directory = "coverage_report"

[tool.ty]
src.include = [ "src", "tests", "docs" ]
src.exclude = [ "**/*.ipynb" ]
